Add all heartbeats endpoint
